@startuml
left to right direction
hide methods
hide stereotypes
skinparam classAttributeIconSize 0

/' Tables '/
class "USERS" {
  +USER_ID : int <<pk>>
  FULLNAME : varchar(100)
  BIRTH : date
  GENDER : USERS_GENDER_enum
  MAJOR : varchar(100)
  USER_LOCATION : varchar(100)
}

class "ACTIVITY" {
  +ACTIVITY_ID : int <<pk>>
  USER_ID : int <<fk>>
  ACT_NAME : varchar(500)
  ACTIVITY_TAGS : ACTIVITY_ACTIVITY_TAGS_enum
  ACTIVITY_CATEGORY : ACTIVITY_ACTIVITY_CATEGORY_enum
  LANGUAGE : ACTIVITY_LANGUAGE_enum
  IS_RESEARCH : tinyint(1)
  ACT_STATUS : ACTIVITY_ACT_STATUS_enum
  PRIOR_PROB : decimal(5,4) {default 0.0000}
  POSTERIOR_PROB_LEARNING : decimal(5,4) {default 0.0000}
  POSTERIOR_PROB_OVERVIEW : decimal(5,4) {default 0.0000}
  POSTERIOR_PROB_PRACTICE : decimal(5,4) {default 0.0000}
  CREATED_AT : timestamp {default CURRENT_TIMESTAMP}
  UPDATED_AT : timestamp {default CURRENT_TIMESTAMP on update}
}

class "ACTIVITY_LOG" {
  +ACTI_LOG_ID : int <<pk>>
  USER_ID : int <<fk>>
  ACTIVITY_ID : int <<fk>>
  ACTLOG_START : datetime
  MUSIC_ON : tinyint(1)
  SOUND_VOLUME : ACTIVITY_LOG_SOUND_VOLUME_enum
  DEVICE : ACTIVITY_LOG_DEVICE_enum
  ACTLOG_LOCATION : ACTIVITY_LOG_ACTLOG_LOCATION_enum
  CLEAN_LEVEL : ACTIVITY_LOG_CLEAN_LEVEL_enum
  WEATHER : ACTIVITY_LOG_WEATHER_enum
  TEMPERATURE : ACTIVITY_LOG_TEMPERATURE_enum
  MOOD : ACTIVITY_LOG_MOOD_enum
  HEALTH : ACTIVITY_LOG_HEALTH_enum
  HUNGER : ACTIVITY_LOG_HUNGER_enum
  AROUSAL : ACTIVITY_LOG_AROUSAL_enum
}

class "ACTIVITY_OUTPUT" {
  +AO_ID : int <<pk>>
  ACTI_LOG_ID : int <<fk>>
  AO_FINISH : datetime
  BREAK_TIME : int
  MENTAL_IN_BREAK : ACTIVITY_OUTPUT_MENTAL_IN_BREAK_enum
  AO_SATISFACTION : ACTIVITY_OUTPUT_AO_SATISFACTION_enum
  FOCUS_LEVEL : ACTIVITY_OUTPUT_FOCUS_LEVEL_enum
}

class "EATING_LOG" {
  +EATING_LOG_ID : int <<pk>>
  USER_ID : int <<fk>>
  EAT_TIME : datetime
  EAT_TYPE : EATING_LOG_EAT_TYPE_enum
  FOOD : EATING_LOG_FOOD_enum
  EAT_AMOUNT : EATING_LOG_EAT_AMOUNT_enum
  FOOD_SOURCE : EATING_LOG_FOOD_SOURCE_enum
  HEALTHINESS : EATING_LOG_HEALTHINESS_enum
  FLAVOUR : EATING_LOG_FLAVOUR_enum
  EAT_FILL : EATING_LOG_EAT_FILL_enum
}

class "FITNESS_LOG" {
  +USER_ID : int <<pk>><<fk>>
  +FITNESS_START : datetime <<pk>>
  FITNESS_TYPE : FITNESS_LOG_FITNESS_TYPE_enum
  FITNESS_DURATION_MINUTES : int
  FITNESS_INTENSITY : FITNESS_LOG_FITNESS_INTENSITY_enum
}

class "KIT_COUNT" {
  +KIT_COUNT_ID : int <<pk>>
  AO_ID : int <<fk>>
  TOTAL_COUNT : float
  UNIT_COUNT : KIT_COUNT_UNIT_COUNT_enum
}

class "KIT_EXERCISES" {
  +KIT_EXERCISES_ID : int <<pk>>
  AO_ID : int <<fk>>
  TOTAL_QUESTION : float
  TRUE_TOTAL : float
  TIME_FINISH : KIT_EXERCISES_TIME_FINISH_enum
}

class "KIT_HOUSEWORK" {
  +KIT_HOUSEWORK_ID : int <<pk>>
  AO_ID : int <<fk>>
  HOUSEWORK_AMOUNT : KIT_HOUSEWORK_HOUSEWORK_AMOUNT_enum
}

class "KIT_IELTS_LISTENING" {
  +KIT_IELTS_LISTENING_ID : int <<pk>>
  AO_ID : int <<fk>>
  SCORE_BAND : float
  COMPREHENSION_TYPE : KIT_IELTS_LISTENING_COMPREHENSION_TYPE_enum
  TOPIC_FAMILIARITY : KIT_IELTS_LISTENING_TOPIC_FAMILIARITY_enum
  SPEED_HANDLING : KIT_IELTS_LISTENING_SPEED_HANDLING_enum
  SPELLING_ACCURACY : KIT_IELTS_LISTENING_SPELLING_ACCURACY_enum
  ANSWER_COMPLETION : KIT_IELTS_LISTENING_ANSWER_COMPLETION_enum
  AUDIO_RECOGNITION : KIT_IELTS_LISTENING_AUDIO_RECOGNITION_enum
}

class "KIT_IELTS_READING" {
  +KIT_IELTS_READING_ID : int <<pk>>
  AO_ID : int <<fk>>
  SCORE_BAND : float
  COMPREHENSION_TYPE : KIT_IELTS_READING_COMPREHENSION_TYPE_enum
  TIME_MANAGEMENT : KIT_IELTS_READING_TIME_MANAGEMENT_enum
  READING_SPEED : KIT_IELTS_READING_READING_SPEED_enum
  COMPREHENSION_DEPTH : KIT_IELTS_READING_COMPREHENSION_DEPTH_enum
  TEXT_COMPLEXITY_HANDLING : KIT_IELTS_READING_TEXT_COMPLEXITY_HANDLING_enum
  VOCABULARY_RECOGNITION : KIT_IELTS_READING_VOCABULARY_RECOGNITION_enum
  ANSWER_ACCURACY : KIT_IELTS_READING_ANSWER_ACCURACY_enum
}

class "KIT_IELTS_SPEAKING" {
  +KIT_IELTS_SPEAKING_ID : int <<pk>>
  AO_ID : int <<fk>>
  FLUENCY_COHESION : KIT_IELTS_SPEAKING_FLUENCY_COHESION_enum
  LEXICAL_RESOURCE : KIT_IELTS_SPEAKING_LEXICAL_RESOURCE_enum
  GRAMMATICAL_RANGE_ACCURACY : KIT_IELTS_SPEAKING_GRAMMATICAL_RANGE_ACCURACY_enum
  PRONUNCIATION : KIT_IELTS_SPEAKING_PRONUNCIATION_enum
  IDEA_ORGANIZATION : KIT_IELTS_SPEAKING_IDEA_ORGANIZATION_enum
  TOPIC_HANDLING : KIT_IELTS_SPEAKING_TOPIC_HANDLING_enum
  INTERACTIVE_COMMUNICATION : KIT_IELTS_SPEAKING_INTERACTIVE_COMMUNICATION_enum
  CONFIDENCE_LEVEL : KIT_IELTS_SPEAKING_CONFIDENCE_LEVEL_enum
}

class "KIT_IELTS_WRITING_TASK1" {
  +KIT_IELTS_WRITING_TASK1_ID : int <<pk>>
  AO_ID : int <<fk>>
  TASK_ACHIEVEMENT : KIT_IELTS_WRITING_TASK1_TASK_ACHIEVEMENT_enum
  COHERENCE_COHESION : KIT_IELTS_WRITING_TASK1_COHERENCE_COHESION_enum
  LEXICAL_RESOURCE : KIT_IELTS_WRITING_TASK1_LEXICAL_RESOURCE_enum
  GRAMMATICAL_RANGE_ACCURACY : KIT_IELTS_WRITING_TASK1_GRAMMATICAL_RANGE_ACCURACY_enum
  TONE_FORMALITY : KIT_IELTS_WRITING_TASK1_TONE_FORMALITY_enum
  VISUAL_DESCRIPTION_SKILL : KIT_IELTS_WRITING_TASK1_VISUAL_DESCRIPTION_SKILL_enum
}

class "KIT_IELTS_WRITING_TASK2" {
  +KIT_IELTS_WRITING_TASK2_ID : int <<pk>>
  AO_ID : int <<fk>>
  TASK_RESPONSE : KIT_IELTS_WRITING_TASK2_TASK_RESPONSE_enum
  COHERENCE_COHESION : KIT_IELTS_WRITING_TASK2_COHERENCE_COHESION_enum
  LEXICAL_RESOURCE : KIT_IELTS_WRITING_TASK2_LEXICAL_RESOURCE_enum
  GRAMMATICAL_RANGE_ACCURACY : KIT_IELTS_WRITING_TASK2_GRAMMATICAL_RANGE_ACCURACY_enum
  ARGUMENT_QUALITY : KIT_IELTS_WRITING_TASK2_ARGUMENT_QUALITY_enum
  IDEAS_ORIGINALITY : KIT_IELTS_WRITING_TASK2_IDEAS_ORIGINALITY_enum
  COUNTERARGUMENT_HANDLING : KIT_IELTS_WRITING_TASK2_COUNTERARGUMENT_HANDLING_enum
}

class "KIT_READING" {
  +KIT_ACADEMIC_READING_ID : int <<pk>>
  AO_ID : int <<fk>>
  TRANSLATION : KIT_READING_TRANSLATION_enum
  TRANSLATION_TYPE : KIT_READING_TRANSLATION_TYPE_enum
  COMPREHENSION_DEPTH : KIT_READING_COMPREHENSION_DEPTH_enum
  PROOF_TRACE_ABILITY : KIT_READING_PROOF_TRACE_ABILITY_enum
  LINKING_TO_PREVIOUS_KNOWLEDGE : KIT_READING_LINKING_TO_PREVIOUS_KNOWLEDGE_enum
  MENTAL_FATIGUE : KIT_READING_MENTAL_FATIGUE_enum
  READING_SPEED_FOR_PROOF : KIT_READING_READING_SPEED_FOR_PROOF_enum
  CONTENT_LEVEL : KIT_READING_CONTENT_LEVEL_enum
  INTERESTING_LEVEL : KIT_READING_INTERESTING_LEVEL_enum
}

class "KIT_WRITING" {
  +KIT_ACADEMIC_WRITING_ID : int <<pk>>
  AO_ID : int <<fk>>
  CURRENT_WORDS : int
  MENTAL_FATIGUE : KIT_WRITING_MENTAL_FATIGUE_enum
  CONTENT_LEVEL : KIT_WRITING_CONTENT_LEVEL_enum
  INTERESTING_LEVEL : KIT_WRITING_INTERESTING_LEVEL_enum
  AI_CHATBOT_USAGE_LEVEL : KIT_WRITING_AI_CHATBOT_USAGE_LEVEL_enum
}

class "SCREEN_TIME" {
  +SCREEN_TIME_ID : int <<pk>>
  USER_ID : int <<fk>>
  DAY : date
  DEVICE : SCREEN_TIME_DEVICE_enum
  SCREEN_TIME : float
  SOCIAL : float
}

class "SEXUAL_LOG" {
  +USER_ID : int <<pk>><<fk>>
  +SEXLOG_TIME : datetime <<pk>>
  SEXLOG_DURING : SEXUAL_LOG_SEXLOG_DURING_enum
  PARTNERED : tinyint(1)
  SATISFACTION : SEXUAL_LOG_SATISFACTION_enum
  SEXLOG_LOCATION : SEXUAL_LOG_SEXLOG_LOCATION_enum
  SEXLOG_SHOOT : SEXUAL_LOG_SEXLOG_SHOOT_enum
}

class "SHOWER_LOG" {
  +USER_ID : int <<pk>><<fk>>
  +SHOWER_START : datetime <<pk>>
  SHOWER_DURING : SHOWER_LOG_SHOWER_DURING_enum
  SHOWER_TEMP : SHOWER_LOG_SHOWER_TEMP_enum
}

class "SLEEP_LOG" {
  +USER_ID : int <<pk>><<fk>>
  +SLEEP_START : datetime <<pk>>
  SLEEP_END : datetime
  SLEEP_ALONE : tinyint(1)
  SLEEP_TYPE : SLEEP_LOG_SLEEP_TYPE_enum
  SLEEP_QUALITY : SLEEP_LOG_SLEEP_QUALITY_enum
  DREAM : SLEEP_LOG_DREAM_enum
  IS_AWAKE : tinyint(1)
  FELL_ASLEEP : SLEEP_LOG_FELL_ASLEEP_enum
  WAKE_FEELING : SLEEP_LOG_WAKE_FEELING_enum
  SLEEP_ENVIRONMENT : SLEEP_LOG_SLEEP_ENVIRONMENT_enum
  WAKE_UP_BY_ALARM : tinyint(1)
  ALARM_VOLUME : SLEEP_LOG_ALARM_VOLUME_enum
  IS_VIBRATE_ALARM : tinyint(1)
  PHONE_BF_SLEEP : SLEEP_LOG_PHONE_BF_SLEEP_enum
  PRE_SLEEP_THOUGHT : SLEEP_LOG_PRE_SLEEP_THOUGHT_enum
}

/' Relationships '/
"USERS" ||--o{ "ACTIVITY" : USER_ID
"USERS" ||--o{ "ACTIVITY_LOG" : USER_ID
"ACTIVITY" ||--o{ "ACTIVITY_LOG" : ACTIVITY_ID
"ACTIVITY_LOG" ||--o{ "ACTIVITY_OUTPUT" : ACTI_LOG_ID
"USERS" ||--o{ "EATING_LOG" : USER_ID
"USERS" ||--o{ "FITNESS_LOG" : USER_ID
"ACTIVITY_OUTPUT" ||--o{ "KIT_COUNT" : AO_ID
"ACTIVITY_OUTPUT" ||--o{ "KIT_EXERCISES" : AO_ID
"ACTIVITY_OUTPUT" ||--o{ "KIT_HOUSEWORK" : AO_ID
"ACTIVITY_OUTPUT" ||--o{ "KIT_IELTS_LISTENING" : AO_ID
"ACTIVITY_OUTPUT" ||--o{ "KIT_IELTS_READING" : AO_ID
"ACTIVITY_OUTPUT" ||--o{ "KIT_IELTS_SPEAKING" : AO_ID
"ACTIVITY_OUTPUT" ||--o{ "KIT_IELTS_WRITING_TASK1" : AO_ID
"ACTIVITY_OUTPUT" ||--o{ "KIT_IELTS_WRITING_TASK2" : AO_ID
"ACTIVITY_OUTPUT" ||--o{ "KIT_READING" : AO_ID
"ACTIVITY_OUTPUT" ||--o{ "KIT_WRITING" : AO_ID
"USERS" ||--o{ "SCREEN_TIME" : USER_ID
"USERS" ||--o{ "SEXUAL_LOG" : USER_ID
"USERS" ||--o{ "SHOWER_LOG" : USER_ID
"USERS" ||--o{ "SLEEP_LOG" : USER_ID

@enduml
